bazarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  labels:
    app: bazarr
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Bazarr
    gethomepage.dev/group: Media Tools
    gethomepage.dev/icon: bazarr.png
    gethomepage.dev/description: Subtitle Downloader
spec:
  tls:
  - hosts:
    - bazarr.k.oneill.net
    secretName: bazarr-tls
  rules:
  - host: bazarr.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
